--- a/TODO
+++ b/TODO
@@ -1,17 +1,11 @@
--update
-cache file data so not rereading from disk
-get word length histogram stats
-add per word vectorization
-
-add per 1/2/n sliding window word examples
-every word becomes example
-every example sliding window pair of words becomes example
-every example sliding window 3 words becomes example
+train/evaluate
+create demo UI
+support adding additional training examples
+upload for other language data
 
 
 create more examples
 -----------------------------
-read from sentence generator
-call translate
+read from sentence generator - gutenburg
+call google translate
 persist
-
